test/classes/deitz/test_union_method3.future
deitz

Line number prints out wrong in union test.

This is because copy drops the line numbers.
